bug: bg image resize issue on mobile, add height 100vh to parallax div

--- a/CSS/About.css
+++ b/CSS/About.css
@@ -9,7 +9,8 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    /* background-size: cover; */
+    background-size: cover;
+    height: 100vh;
     width: 100%;
 }
 .para-text {
